<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTile"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/editxtYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint1"
        android:inputType="number"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtTile"
        app:layout_constraintTop_toBottomOf="@+id/txtTile"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editxtInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint3"
        android:inputType="numberDecimal"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editxtAmount"
        app:layout_constraintTop_toBottomOf="@+id/editxtAmount"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editxtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint2"
        android:inputType="numberDecimal"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editxtYears"
        app:layout_constraintTop_toBottomOf="@+id/editxtYears"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="389dp"
        android:layout_marginBottom="3dp"
        android:text="@string/btnPayment"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/imgDes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPayment"
        app:srcCompat="@drawable/opening" />

</androidx.constraintlayout.widget.ConstraintLayout>